[project]
name = "rkllama"
version = "0.0.75"
authors = [
    { name="NotPunchnox", email="punchnoxpro@gmail.com" },
    { name="TomJacobsUK", email="tom@tomjacobs.co.uk" },
    { name="Daniel Ferreira", email="danielferreirandrade@gmail.com" },
]
description = "Ollama alternative for Rockchip NPU"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.2",
    "requests==2.31.0",
    "huggingface_hub==0.35.1",
    "python-dotenv==1.1.1",
    "transformers==4.57.6",
    "torch==2.8.0",
    "flask-cors==6.0.1",
    "pydantic==2.11.9",
    "psutil==7.1.0",
    "pillow==11.3.0",
    "diffusers==0.35.1",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "piper-tts==1.3.0",
    "pydub==0.25.1",
    "ffmpeg==1.4",
    "soxr==1.0.0",
    "soundfile==0.13.1",
    "openai-whisper==20250625",
    "webrtcvad==2.0.10",
    "rknn-toolkit-lite2 @ file:./src/rkllama/lib/rknn_toolkit_lite2-2.3.2-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.12'",
    "rknn-toolkit-lite2 @ file:./src/rkllama/lib/rknn_toolkit_lite2-2.3.2-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.11'",
    "rknn-toolkit-lite2 @ file:./src/rkllama/lib/rknn_toolkit_lite2-2.3.2-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.10'",
    "rknn-toolkit-lite2 @ file:./src/rkllama/lib/rknn_toolkit_lite2-2.3.2-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl ; python_version == '3.9'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]


[options]
include_package_data = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rkllama.lib" = ["*.so", "*.sh"]

[project.urls]
Homepage = "https://github.com/NotPunchnox/rkllama"
Issues = "https://github.com/NotPunchnox/rkllama/issues"

[build-system]
requires = ["setuptools < 82.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
rkllama_server = "rkllama.server.server:main"
rkllama_client = "rkllama.client.client:main"
